# damlnos

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  daml.yaml
.damlings/: state.json
.github/workflows/: check.yml
Solutions/Exercises/Choices/: Ex1.daml  Ex2.daml  Ex4.daml
Solutions/Exercises/Constraints/: Ex2.daml
Solutions/Exercises/Functional101/: Ex1.daml  Ex2.daml  Ex3.daml
Solutions/Exercises/Functions/: Ex2.daml  Ex3.daml  Ex4.daml
Solutions/Exercises/Interfaces/: Ex1.daml  Ex2.daml
Solutions/Exercises/Intro/: Ex1.daml
Solutions/Exercises/Keys/: Ex1.daml
Solutions/Exercises/Lists/: Ex1.daml  Ex3.daml  Ex5.daml
Solutions/Exercises/Optional/: Ex3.daml
Solutions/Exercises/PatternMatching/: Ex1.daml  Ex2.daml  Ex3.daml  Ex4.daml
Solutions/Exercises/Records/: Ex3.daml  Ex4.daml
Solutions/Exercises/Scripts/: Ex2.daml  Ex3.daml
Solutions/Exercises/Templates/: Ex1.daml
Solutions/Exercises/Types/: Ex2.daml  Ex3.daml  Ex4.daml
Solutions/Exercises/Variants/: Ex1.daml  Ex2.daml  Ex4.daml
daml/Exercises/Choices/: Ex1.daml  Ex2.daml  Ex3.daml  Ex4.daml  README.md
daml/Exercises/Compose/: Ex1.daml  README.md
daml/Exercises/Constraints/: Ex1.daml  Ex2.daml  README.md
daml/Exercises/Exceptions/: Ex1.daml  README.md
daml/Exercises/Functional101/: Ex1.daml  Ex2.daml  Ex3.daml  README.md
daml/Exercises/Functions/: Ex1.daml  Ex2.daml  Ex3.daml  Ex4.daml  Ex5.daml  README.md
daml/Exercises/Interfaces/: Ex1.daml  (+2 more)
scripts/: verify-solutions.sh
src/: exercises.rs  main.rs  runner.rs  state.rs  ui.rs  watcher.rs
(+99 files in other folders)
