[package]
name = "damlnos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Learn DAML by fixing broken code — a Rustlings-inspired exercise runner"

[[bin]]
name = "damlnos"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
colored    = "2"
notify     = "6"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
